Jinja Changelog
===============

Version 1.1
-----------
(codename to be selected, release date unknown)

- blocks now support ``{{ super() }}`` to render the parent output.

- debugging system improved, smaller filesize for the cached files.
  Debugging works now well for any module using linecache.

- added whitespace management system for the template designer.

- some small bugfixes.

- improved security system regarding function calls.

- added `lipsum` function to generate random text.

- strings without unicode characters are processed as binary strings now
  to workaround problems with `datetime.strftime` which only accepts
  binary strings.

- developer friendly traceback is now toggleable

- silent variable name failure is now toggleable

- fixed issue with old-style classes not implementing `__getitem__`
  (thanks to Axel Böhm for discovering that bug)

- added a bunch of new docstrings to the Jinja classes. Makes fun now to
  use pydoc :-)

- fixed severe memcaching bug. Formerly it wasn't possible to use memcaching
  without enabling disk cache.

- fixed a bug that allowed users to override the special names `_`, `true` etc.

- added `batch` and `slice` filters


Version 1.0
-----------
(released Mar 23, 2007)

- Initial release